Change: Exercise VO.T30, define subtraction more carefully (Ken Price)
Change: Theorems SSNS, BNS need case when n = r (Ken Price)
Change: Example NIDAU, in discussion, "are" to "is" (Lukas Karoly)
Change: Exercise LT.C43, clarify versions of the zero vector (Jake Rizzo)
Change: Solution SLT.C27, "are" to "is" (Ashlen Isbell)
Change: Rename Theorem NPNT as Theorem NPNF (Sam Webb)
Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
Typo: Exercise MM.T12, correct reference, reword slightly (Matt Fergoda)
Typo: Theorem SMEZV, formatting error, second equation in Case 2 of proof (Matt Fergoda)
Typo: Exercises VS, group three cancellation exercises properly (Rachel Chaiser)
Typo: Solution EE.C19, correct two subscripts at the end (Matt Fergoda)
Typo: Theorem EIM, last line of proof need a zero vector (Matt Fergoda)
Typo: Exercise MR.T60, use correct linear transformation (Rachel Hirsch)
Typo: Section VR, "than" corrected to "then" (Rachel Chaiser)
Typo: Exercises ILT.C27, ILT.C28, and ILT.C29, "nullspace" is two words (Rachel Hirsch)
Typo: Section PD, "that" to "than" (Benjamin Millam)
Typo: Sage NS, "us" to "use" (Evan Eurs)
Typo: Sage SS3, missing "we" (Evan Eurs)
Typo: Example DRO, LaTeX macro for arrow incorrect (Patrick Zimmerman)
Typo: Index heading, "crazy vector space" (Samuel Gonzalez)
Typo: Theorem VFSLS, count non-pivot columns correctly (Rachel Chaiser)
Typo: Sage RCLS, add in a missing pronoun (Lukas Karoly)
Typo: Sage VSCV, "teh", extra "a" (Sam Keller)
Typo: Example TM, clean up unfinished edit (Ben Concannon)
Typo: Theorem BCS, missing period in statement (Jake Rizzo)
Typo: Theorem CUMOS, incorrect reason in proof (Uta Konishi)
Typo: Exercise LISS.C41, needed a space (Jake Rizzo)
Typo: Proof of Theorem CRN, "that that" (Bee Bridges)
Typo: Solution LISS.T51, Exercise ILT.T15, "that that"
Typo: Exercises EE.C23-C27, sets inside spans (Ashlen Isbell)