@@ -28,39 +28,34 @@
             <proof>
                 <case direction="forward">
                     <p>For this portion of the proof we will form the logically-equivalent contrapositive and prove that statement using two cases.  <q><m>AB</m> is nonsingular implies <m>A</m> and <m>B</m> are both nonsingular</q> becomes <q><m>A</m> or <m>B</m> is singular implies <m>AB</m> is singular.</q>  (Be sure to undertstand why the <q>and</q> became an <q>or</q>, see Proof Technique<nbsp/><xref ref="technique-CP" acro="CP" text="global"/>.)</p>
-                    <p>Case 1.  Suppose <m>B</m> is singular.  Then there is a nonzero vector <m>\vect{z}</m> that is a solution to <m>\homosystem{B}</m>.  So<md>
-                        <mrow>(AB)\vect{z}
-                        &amp;=A(B\vect{z})&amp;&amp;
-                            <xref ref="theorem-MMA" acro="MMA"/></mrow>
-                        <mrow>&amp;=A\zerovector&amp;&amp;
-                            <xref ref="theorem-SLEMM" acro="SLEMM"/></mrow>
-                        <mrow>&amp;=\zerovector&amp;&amp;
-                            <xref ref="theorem-MMZM" acro="MMZM"/></mrow>
-                    </md>.</p>
-                    <p>With <xref ref="theorem-SLEMM" acro="SLEMM"/> we can translate this vector equality to the statement that <m>\vect{z}</m> is a nonzero solution to <m>\homosystem{AB}</m>.  Thus <m>AB</m> is singular (<xref ref="definition-NM" acro="NM"/>), as desired.</p>
-                    <p>Case 2.  Suppose <m>A</m> is singular, and <m>B</m> is not singular.  In other words, with Case 1 complete, we can be more precise about this remaining case and assume that <m>B</m> is nonsingular.  Because <m>A</m> is singular, there is a nonzero vector <m>\vect{y}</m> that is a solution to <m>\homosystem{A}</m>.  Now consider the linear system <m>\linearsystem{B}{\vect{y}}</m>.  Since <m>B</m> is nonsingular, the system has a unique solution (<xref ref="theorem-NMUS" acro="NMUS"/>), which we will denote as <m>\vect{w}</m>.  We first claim <m>\vect{w}</m> is not the zero vector either.  Assuming the opposite, suppose that <m>\vect{w}=\zerovector</m> (Proof Technique<nbsp/><xref ref="technique-CD" acro="CD" text="global"/>).  Then<md>
-                        <mrow>\vect{y}
-                        &amp;=B\vect{w}&amp;&amp;
-                            <xref ref="theorem-SLEMM" acro="SLEMM"/></mrow>
-                        <mrow>&amp;=B\zerovector&amp;&amp;\text{Hypothesis}</mrow>
-                        <mrow>&amp;=\zerovector&amp;&amp;
-                            <xref ref="theorem-MMZM" acro="MMZM"/></mrow><intertext>contrary to <m>\vect{y}</m> being nonzero.  So <m>\vect{w}\neq\zerovector</m>.  The pieces are in place, so here we go,</intertext><mrow>(AB)\vect{w}
-                        &amp;=A(B\vect{w})&amp;&amp;
-                            <xref ref="theorem-MMA" acro="MMA"/></mrow>
-                        <mrow>&amp;=A\vect{y}&amp;&amp;
-                            <xref ref="theorem-SLEMM" acro="SLEMM"/></mrow>
-                        <mrow>&amp;=\zerovector&amp;&amp;
-                            <xref ref="theorem-SLEMM" acro="SLEMM"/></mrow>
-                    </md>.</p>
-                    <p>With <xref ref="theorem-SLEMM" acro="SLEMM"/> we can translate this vector equality to the statement that <m>\vect{w}</m> is a nonzero solution to <m>\homosystem{AB}</m>.  Thus <m>AB</m> is singular (<xref ref="definition-NM" acro="NM"/>), as desired.  And this conclusion holds for both cases.</p>
+                    <paragraphs>
+                        <title>Case 1.  <m>B</m> is singular</title>
+                        <p>Because <m>B</m> is singular there must be a nonzero vector <m>\vect{z}</m> that is a solution to <m>\homosystem{B}</m>.  So<md>
+                            <mrow>(AB)\vect{z}&amp;=A(B\vect{z})&amp;&amp;<xref ref="theorem-MMA" acro="MMA"/></mrow>
+                            <mrow>&amp;=A\zerovector&amp;&amp;<xref ref="theorem-SLEMM" acro="SLEMM"/></mrow>
+                            <mrow>&amp;=\zerovector&amp;&amp;<xref ref="theorem-MMZM" acro="MMZM"/></mrow>
+                        </md>.</p>
+                        <p>With <xref ref="theorem-SLEMM" acro="SLEMM"/> we can translate this vector equality to the statement that <m>\vect{z}</m> is a nonzero solution to <m>\homosystem{AB}</m>.  Thus <m>AB</m> is singular (<xref ref="definition-NM" acro="NM"/>), as desired.</p>
+                    </paragraphs>
+                    <paragraphs>
+                        <title>Case 2.  <m>B</m> is nonsingular</title>
+                        <p>Since <m>B</m> is nonsingular, our hypothesis implies that <m>A</m> must be singular.  Because <m>A</m> is singular, there is a nonzero vector <m>\vect{y}</m> that is a solution to <m>\homosystem{A}</m>.  Now consider the linear system <m>\linearsystem{B}{\vect{y}}</m>.  Since <m>B</m> is nonsingular, the system has a unique solution (<xref ref="theorem-NMUS" acro="NMUS"/>), which we will denote as <m>\vect{w}</m>.  We first claim <m>\vect{w}</m> is not the zero vector either.  Assuming the opposite, suppose that <m>\vect{w}=\zerovector</m> (Proof Technique<nbsp/><xref ref="technique-CD" acro="CD" text="global"/>).  Then<md>
+                            <mrow>\vect{y}&amp;=B\vect{w}&amp;&amp;<xref ref="theorem-SLEMM" acro="SLEMM"/></mrow>
+                            <mrow>&amp;=B\zerovector&amp;&amp;\text{Hypothesis}</mrow>
+                            <mrow>&amp;=\zerovector&amp;&amp;<xref ref="theorem-MMZM" acro="MMZM"/></mrow>
+                        </md>contrary to <m>\vect{y}</m> being nonzero.  So <m>\vect{w}\neq\zerovector</m>.</p>
+                        <p>The pieces are in place, so here we go,<md>
+                            <mrow>(AB)\vect{w}&amp;=A(B\vect{w})&amp;&amp;<xref ref="theorem-MMA" acro="MMA"/></mrow>
+                            <mrow>&amp;=A\vect{y}&amp;&amp;<xref ref="theorem-SLEMM" acro="SLEMM"/></mrow>
+                            <mrow>&amp;=\zerovector&amp;&amp;<xref ref="theorem-SLEMM" acro="SLEMM"/></mrow>
+                        </md>.</p>
+                        <p>With <xref ref="theorem-SLEMM" acro="SLEMM"/> we can translate this vector equality to the statement that <m>\vect{w}</m> is a nonzero solution to <m>\homosystem{AB}</m>.  Thus <m>AB</m> is singular (<xref ref="definition-NM" acro="NM"/>), as desired.  And this conclusion holds for both cases.</p>
+                    </paragraphs>
                 </case>
                 <case direction="backward">
                     <p> Now assume that both <m>A</m> and <m>B</m> are nonsingular.  Suppose that <m>\vect{x}\in\complex{n}</m> is a solution to <m>\homosystem{AB}</m>.  Then<md>
-                        <mrow>\zerovector
-                        &amp;=\left(AB\right)\vect{x}&amp;&amp;
-                            <xref ref="theorem-SLEMM" acro="SLEMM"/></mrow>
-                        <mrow>&amp;=A\left(B\vect{x}\right)&amp;&amp;
-                            <xref ref="theorem-MMA" acro="MMA"/></mrow>
+                        <mrow>\zerovector&amp;=\left(AB\right)\vect{x}&amp;&amp;<xref ref="theorem-SLEMM" acro="SLEMM"/></mrow>
+                        <mrow>&amp;=A\left(B\vect{x}\right)&amp;&amp;<xref ref="theorem-MMA" acro="MMA"/></mrow>
                     </md>.</p>
                     <p>By <xref ref="theorem-SLEMM" acro="SLEMM"/>, <m>B\vect{x}</m> is a solution to <m>\homosystem{A}</m>, and by the definition of a nonsingular matrix (<xref ref="definition-NM" acro="NM"/>), we conclude that <m>B\vect{x}=\zerovector</m>.  Now, by an entirely similar argument, the nonsingularity of <m>B</m> forces us to conclude that <m>\vect{x}=\zerovector</m>.  So the only solution to <m>\homosystem{AB}</m> is the zero vector and we conclude that <m>AB</m> is nonsingular by <xref ref="definition-NM" acro="NM"/>.</p>
                 </case>
